<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEDED"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="80dp"
        android:text="@string/dam_app_txt"
        android:textColor="@color/TextColor"
        android:textSize="80dp"
        android:id="@+id/dam_id"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_txt"
        android:textSize="40dp"
        android:textColor="@color/TextColor"
        android:layout_toRightOf="@+id/dam_id"
        android:layout_marginTop="83dp"
        android:layout_marginLeft="5dp"
        android:textStyle="italic"
        android:id="@+id/app_id"
        />

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dam_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_an_account_txt"
        android:textColor="@color/TextColor"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/full_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/full_name_txt"
        android:textColor="@color/TextColor"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/full_name_txt"
        android:layout_marginLeft="18dp"
        android:paddingRight="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableBottom="@color/TextColor"
        android:hint="@string/enter_full_name_hint_txt"
        android:maxLength="20"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/TextColor"
        android:textSize="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_txtt"
        android:textColor="@color/TextColor"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:layout_below="@id/name_edit_text"
        android:layout_marginTop="10dp"
        android:id="@+id/email_txt"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/email_txt"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_text"
        android:paddingRight="10dp"
        android:hint="@string/enter_e_mail_txt"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/TextColor"
        android:textSize="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth_txt"
        android:textColor="@color/TextColor"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:layout_below="@id/email_edit_text"
        android:layout_marginTop="10dp"
        android:id="@+id/dob_txt"
        android:textStyle="bold"
        />

    <EditText

        android:id="@+id/dob_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/dob_txt"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="20dp"
        android:paddingRight="10dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/enter_your_date_of_birth_hint"
        android:inputType="date"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/TextColor"
        android:textSize="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_txt"
        android:textColor="@color/TextColor"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:layout_below="@id/dob_edit_text"
        android:layout_marginTop="10dp"
        android:id="@+id/password_txt"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/password_txt"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/set_password_hint"
        android:inputType="textPassword"
        android:maxLength="10"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/TextColor"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/address_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/address_txt"
        android:textColor="@color/TextColor"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/address_txt"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/enter_your_address_hint"
        android:inputType="textEmailAddress"
        android:maxLength="100"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/TextColor"
        android:textSize="15dp" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/TextColor"
        android:text="@string/sign_up_btn_txt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />

</RelativeLayout>