<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEDED"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="80dp"
        android:text="@string/dam_app_txt"
        android:textColor="@color/TextColor"
        android:textSize="80dp"
        android:id="@+id/dam_id"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_txt"
        android:textSize="40dp"
        android:textColor="@color/TextColor"
        android:layout_toRightOf="@+id/dam_id"
        android:layout_marginTop="83dp"
        android:layout_marginLeft="5dp"
        android:textStyle="italic"
        android:id="@+id/app_id"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_txt"
        android:layout_below="@id/dam_id"
        android:layout_centerHorizontal="true"
        android:textSize="35dp"
        android:textColor="@color/TextColor"
        android:textStyle="bold"
        android:layout_marginTop="20dp"

        />
    <TextView
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dam_id"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/e_mail_txt"
        android:textColor="@color/TextColor"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/email_txt"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_text"
        android:textColor="@color/black"
        android:drawableBottom="@color/TextColor"
        android:hint="@string/enter_your_e_mail_hint"
        android:paddingLeft="10dp"
        android:textColorHint="@color/TextColor"
        android:textSize="15dp" />
    <TextView
        android:id="@+id/password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/password_txt"
        android:textColor="@color/TextColor"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/password_txt"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableBottom="@color/TextColor"
        android:textColor="@color/black"
        android:hint="@string/enter_your_password_edit_txt"
        android:inputType="textWebPassword"
        android:paddingLeft="10dp"
        android:textColorHint="@color/TextColor"
        android:textSize="15dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/TextColor"
        android:text="@string/login_btn_txt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/login_btn"
        android:textSize="15dp" />

</RelativeLayout>