<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="80dp"
        android:text="@string/dam_app_txt"
        android:textColor="@color/TextColor"
        android:textSize="80dp"
        android:id="@+id/dam_id"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_txt"
        android:textSize="40dp"
        android:textColor="@color/TextColor"
        android:layout_toRightOf="@+id/dam_id"
        android:layout_marginTop="83dp"
        android:layout_marginLeft="5dp"
        android:textStyle="italic"
        android:id="@+id/app_id"
        />

    <TextView
        android:id="@+id/login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dam_id"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:text="@string/login_txt"
        android:textColor="@color/TextColor"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/or_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/or_txt"
        android:textColor="@color/TextColor"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/create_acc_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/create_account"
        android:textColor="@color/TextColor"
        android:textSize="25dp"
        android:textStyle="bold"
        />


</RelativeLayout>