<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ListActivity">
    <TextView
        android:id="@+id/dam_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/dam_app_txt"
        android:textColor="@color/TextColor"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/app_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/dam_id"
        android:text="@string/app_txt"
        android:textColor="@color/TextColor"
        android:textSize="15dp"
        android:textStyle="italic" />

    <ListView
        android:id="@+id/list_view_id_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp"
        />

    <TextView
        android:id="@+id/logout_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/logout_txt"
        android:textColor="@color/TextColor"
        android:textSize="20dp"
        android:textStyle="italic" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FFCFCF"
        android:src="@drawable/ic_baseline_add_24"
        app:fabSize="normal"
        />
</RelativeLayout>